--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-demo/** linguist-documentation=false
-demo/** linguist-vendored=false
+HTML/** linguist-documentation=false
+HTML/** linguist-vendored=false
