--- a/JSP/src/main/webapp/WEB-INF/web.xml
+++ b/JSP/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,8 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+  <context-param>
+  	<param-name>INIT_PARAM</param-name>
+  	<param-value>web.xml에 저장한 초기화 매개변수</param-value>
+  </context-param>
 </web-app>
